# gitnix

./: ARCHITECTURE.md  README.md
app/: package-lock.json  package.json  server.err  server.mjs
app/public/: app.js  index.html  style.css
docs/: API-JS.md  API-PYTHON.md  GUIDE.md  SECURITY.md
examples/: .env.example  README.md  auth.mjs  benchmark.mjs  db.mjs  e2e-test.mjs  package-lock.json  package.json  security-audit.mjs  server.mjs
examples/public/: app.js  index.html  style.css
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: index.ts
js/src/binary/: chunker.ts  storage.ts
js/src/collections/: collection.ts  schema.ts
js/src/core/: cache.ts  rate-limiter.ts  storage-manager.ts  transport.ts
js/src/crypto/: encryption.ts  kdf.ts  keys.ts
js/src/query/: engine.ts  indexes.ts  operators.ts
js/src/transactions/: conflict.ts  transaction.ts
js/src/types/: argon2-browser.d.ts  index.ts
js/tests/: collection.test.ts  encryption.test.ts  query.test.ts  transport.test.ts
python/: README.md  pyproject.toml
python/gitnix/: __init__.py  binary.py  client.py  collection.py  encryption.py  errors.py  query.py  rate_limiter.py  transaction.py  transport.py  types.py
python/tests/: test_sdk.py
